tests/error/comptime/pointer_difference16.bz
// error: invalid pointer difference operation with type '*i32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to objects in this allocation, which was freed
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 1);
		__builtin_comptime_free(p);

		p - p;
	});
}
